# hchain

./: .gitignore  README.md  hchain.cabal  stack.yaml
app/: Main.hs
src/: BlockChain.hs  Transaction.hs
src/hchain/: BlockChain.hs  Client.hs  CommandLineTool.hs  Miner.hs  Transaction.hs
src/hchain/client/: Chain.hs  CommandLineInterface.hs  Protocol.hs  Transaction.hs
test/: Spec.hs
