name:                hchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hchain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hchain.Transaction
                     , Hchain.BlockChain
                     , Hchain.Client
                     , Hchain.Client.Chain
                     , Hchain.Client.Protocol
                     , Hchain.Client.CommandLineInterface
  build-depends:       base >= 4.7 && < 5
                     , SHA
                     , bytestring
                     , text
                     , MissingH
                     , lens
                     , containers
                     , distributed-process
                     , network-transport-tcp
                     , distributed-process-p2p
                     , network
                     , binary

  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , TemplateHaskell
                     , FlexibleInstances

executable hchain-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hchain
  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , TemplateHaskell
                     , FlexibleInstances

test-suite hchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hchain
                     , hspec
                     , network
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hchain
